Build/third-party-libraries/packages/nuget.org/newtonsoft.json/9.0.1/readme.md
Newtonsoft.Json [9.0.1](https://www.nuget.org/packages/Newtonsoft.Json/9.0.1)
--------------------

Used by: AspNetCoreNSwag

Target frameworks: net5.0, net6.0, net7.0, netcoreapp3.0

License: [MIT](../../../../licenses/mit) 

- package license: [Unknown](https://raw.github.com/JamesNK/Newtonsoft.Json/master/LICENSE.md) , License should be verified on https://raw.github.com/JamesNK/Newtonsoft.Json/master/LICENSE.md
- project license: [Unknown](http://www.newtonsoft.com/json) , License should be verified on http://www.newtonsoft.com/json

Description
-----------
Json.NET is a popular high-performance JSON framework for .NET

Remarks
-----------
no remarks


Dependencies 9
-----------

|Name|Version|
|----------|:----|
|[System.Dynamic.Runtime](../../../../packages/nuget.org/system.dynamic.runtime/4.0.11)|4.0.11|
|[System.Linq](../../../../packages/nuget.org/system.linq/4.1.0)|4.1.0|
|[System.Linq.Expressions](../../../../packages/nuget.org/system.linq.expressions/4.1.1)|4.1.1|
|[System.ObjectModel](../../../../packages/nuget.org/system.objectmodel/4.0.12)|4.0.12|
|[System.Runtime.Serialization.Primitives](../../../../packages/nuget.org/system.runtime.serialization.primitives/4.1.1)|4.1.1|
|[System.Text.RegularExpressions](../../../../packages/nuget.org/system.text.regularexpressions/4.1.0)|4.1.0|
|[System.Threading](../../../../packages/nuget.org/system.threading/4.0.11)|4.0.11|
|[System.Xml.ReaderWriter](../../../../packages/nuget.org/system.xml.readerwriter/4.0.11)|4.0.11|
|[System.Xml.XDocument](../../../../packages/nuget.org/system.xml.xdocument/4.0.11)|4.0.11|

*This page was generated by a tool.*