Build/third-party-libraries/packages/nuget.org/newtonsoft.json/10.0.1/readme.md
Newtonsoft.Json [10.0.1](https://www.nuget.org/packages/Newtonsoft.Json/10.0.1)
--------------------

Used by: AspNetCoreNSwag

Target frameworks: net5.0, net6.0, net7.0, netcoreapp3.0

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://raw.github.com/JamesNK/Newtonsoft.Json/master/LICENSE.md) 
- project license: [Unknown](http://www.newtonsoft.com/json) , License should be verified on http://www.newtonsoft.com/json

Description
-----------
Json.NET is a popular high-performance JSON framework for .NET

Remarks
-----------
no remarks


Dependencies 13
-----------

|Name|Version|
|----------|:----|
|[System.ComponentModel.TypeConverter](../../../../packages/nuget.org/system.componentmodel.typeconverter/4.3.0)|4.3.0|
|[System.Dynamic.Runtime](../../../../packages/nuget.org/system.dynamic.runtime/4.3.0)|4.3.0|
|[System.Linq](../../../../packages/nuget.org/system.linq/4.3.0)|4.3.0|
|[System.Linq.Expressions](../../../../packages/nuget.org/system.linq.expressions/4.3.0)|4.3.0|
|[System.ObjectModel](../../../../packages/nuget.org/system.objectmodel/4.3.0)|4.3.0|
|[System.Runtime.Numerics](../../../../packages/nuget.org/system.runtime.numerics/4.3.0)|4.3.0|
|[System.Runtime.Serialization.Formatters](../../../../packages/nuget.org/system.runtime.serialization.formatters/4.3.0)|4.3.0|
|[System.Runtime.Serialization.Primitives](../../../../packages/nuget.org/system.runtime.serialization.primitives/4.3.0)|4.3.0|
|[System.Text.RegularExpressions](../../../../packages/nuget.org/system.text.regularexpressions/4.3.0)|4.3.0|
|[System.Threading](../../../../packages/nuget.org/system.threading/4.3.0)|4.3.0|
|[System.Xml.ReaderWriter](../../../../packages/nuget.org/system.xml.readerwriter/4.3.0)|4.3.0|
|[System.Xml.XDocument](../../../../packages/nuget.org/system.xml.xdocument/4.3.0)|4.3.0|
|[System.Xml.XmlDocument](../../../../packages/nuget.org/system.xml.xmldocument/4.3.0)|4.3.0|

*This page was generated by a tool.*